--- a/tidy.scss
+++ b/tidy.scss
@@ -46,7 +46,7 @@ body {
   background-color: $white; //
   position: relative;
   font-size: 1rem;
-  list-style: none; //
+  // list-style: none; //
   header {
     z-index: 10;
     position: fixed;
@@ -148,7 +148,7 @@ body {
   }
   a {
     text-decoration: none;
-    color: $brown;
+    color: $purple;
   }
 }
 main {
@@ -192,13 +192,23 @@ main {
     .dropdown-cont {
       margin: 1rem;
       text-align: center;
-      width: 100vw; // prevents wrap
+      border-radius: 50%;
       .dropdown-icon {
-        cursor: pointer;
+        font-family: $monaco;
         color: $purple;
+        cursor: pointer;
         transition: 0.2s;
         &:hover {
           color: $dark-purple;
+        }
+        .down-arrows {
+          transition: 0.2s;
+        }
+        a {
+          color: $brown;
+        }
+        a:hover ~ .down-arrows {
+          transform: translateY(0.2rem);
         }
       }
       .dropdown-list {
@@ -247,7 +257,9 @@ main {
       align-items: center;
       min-height: 5rem;
       height: min-content;
-      // margin: 1rem; //
+    }
+    .article {
+      max-width: 40rem;
     }
     .container {
       display: flex;
@@ -281,7 +293,7 @@ main {
       h3 {
         font-size: 1rem;
       }
-      .card-list {
+      .card-lists {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -295,12 +307,16 @@ main {
               font-family: $monaco;
               color: $dark-purple;
               font-size: 0.9rem;
+              img {
+                max-width: 10px;
+              }
             }
           }
         }
       }
       figure {
         img {
+          width: 80%;
           max-width: 500px;
         }
       }
@@ -309,6 +325,15 @@ main {
         a {
           position: absolute;
           top: -10rem;
+        }
+      }
+      ul {
+        text-align: center;
+        li {
+          img {
+            width: 80%;
+            max-width: 500px;
+          }
         }
       }
       form {
@@ -336,11 +361,11 @@ main {
           color: $dark-purple;
         }
       }
-      #expand-check1:checked ~ #blog1,
-      #expand-check2:checked ~ #blog2,
-      #expand-check3:checked ~ #blog3,
-      #expand-check4:checked ~ #blog4,
-      #expand-check5:checked ~ #blog5 {
+      #expand-check1:checked ~ #card1,
+      #expand-check2:checked ~ #card2,
+      #expand-check3:checked ~ #card3,
+      #expand-check4:checked ~ #card4,
+      #expand-check5:checked ~ #card5 {
         max-height: 500rem;
         -webkit-mask-image: none;
         mask-image: none;
@@ -361,7 +386,7 @@ main {
       min-width: 15rem;
       text-align: center;
     }
-    .blog-time {
+    .card-time {
       text-align: center;
       display: block;
       font-family: $monaco;
@@ -545,9 +570,6 @@ footer {
       top: 0;
       padding-left: 5rem;
       .content {
-        .article {
-          max-width: 60rem;
-        }
         .modular {
           width: 40%; //
         }
