--- a/tidy.css
+++ b/tidy.css
@@ -226,11 +226,9 @@ main .content .modular {
   align-items: center;
   min-height: 5rem;
   height: min-content;
+  width: 100%;
 }
-main .content .article {
-  max-width: 40rem;
-}
-main .content .container {
+main .content .wide-cont {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -239,16 +237,17 @@ main .content .container {
 main .content .card {
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
   margin: 1rem 0rem;
   padding: 1rem;
-  background-color: white;
+  max-width: 40rem;
+  background-color: rgb(249, 247, 242);
   border-radius: 1rem 1rem 1rem 1rem;
   box-shadow: 0px 0px 5px rgba(128, 128, 128, 0.669);
   transition: 0.2s;
 }
 main .content .card:hover {
   transform: scale(1.01);
+  background-color: white;
   box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.669);
 }
 main .content .card h2,
@@ -280,9 +279,6 @@ main .content .card .card-lists div ul li {
   font-family: "Monaco", monospace;
   color: rgb(35, 0, 139);
   font-size: 0.9rem;
-}
-main .content .card .card-lists div ul li img {
-  max-width: 10px;
 }
 main .content .card figure img {
   width: 80%;
@@ -338,6 +334,9 @@ main .content .card #expand-check3,
 main .content .card #expand-check4,
 main .content .card #expand-check5 {
   display: none;
+}
+main .content .card #card2 {
+  justify-self: baseline;
 }
 main .content figcaption {
   text-align: center;
@@ -405,7 +404,7 @@ footer #footer-text {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
     padding: 1rem 3rem;
   }
@@ -525,6 +524,9 @@ footer #footer-text {
   body main {
     top: 0;
     padding-left: 5rem;
+  }
+  body main .content {
+    flex-wrap: wrap;
   }
   body main .content .modular {
     width: 40%;
