--- a/tidy.scss
+++ b/tidy.scss
@@ -257,11 +257,9 @@ main {
       align-items: center;
       min-height: 5rem;
       height: min-content;
+      width: 100%;
     }
-    .article {
-      max-width: 40rem;
-    }
-    .container {
+    .wide-cont {
       display: flex;
       flex-direction: row;
       justify-content: space-evenly;
@@ -270,15 +268,16 @@ main {
     .card {
       display: flex;
       flex-direction: column;
-      flex-wrap: nowrap; //
       margin: 1rem 0rem;
       padding: 1rem;
-      background-color: white; //
+      max-width: 40rem;
+      background-color: $white; //
       @include card-border();
       @include box-shadow();
       transition: 0.2s;
       &:hover {
         transform: scale(1.01);
+        background-color: white;
         box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.669);
       }
       h2,
@@ -307,9 +306,6 @@ main {
               font-family: $monaco;
               color: $dark-purple;
               font-size: 0.9rem;
-              img {
-                max-width: 10px;
-              }
             }
           }
         }
@@ -376,6 +372,9 @@ main {
       #expand-check4,
       #expand-check5 {
         display: none;
+      }
+      #card2 {
+        justify-self: baseline;
       }
     }
     figcaption {
@@ -446,7 +445,7 @@ footer {
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
-        align-items: center;
+        align-items: flex-start; //
         flex-wrap: wrap;
         padding: 1rem 3rem;
         .card {
@@ -570,6 +569,7 @@ footer {
       top: 0;
       padding-left: 5rem;
       .content {
+        flex-wrap: wrap;
         .modular {
           width: 40%; //
         }
