--- a/tidy.scss
+++ b/tidy.scss
@@ -325,10 +325,11 @@ main {
       }
       ul {
         text-align: center;
+        list-style: none;
         li {
           img {
             width: 80%;
-            max-width: 500px;
+            max-width: 300px;
           }
         }
       }
@@ -572,6 +573,17 @@ footer {
         flex-wrap: wrap;
         .modular {
           width: 40%; //
+        }
+        .column {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          flex-wrap: wrap;
+          width: 40%;
+          .card {
+            width: 100%;
+            min-width: 20rem;
+          }
         }
       }
     }
