--- a/tidy.css
+++ b/tidy.css
@@ -288,10 +288,14 @@ main .content .card figure img {
   width: 80%;
   max-width: 500px;
 }
-main .content .card label {
+main .content .card .anchor {
+  position: absolute;
+  top: -10rem;
+}
+main .content .card label, main .content .card span {
   position: relative;
 }
-main .content .card label a {
+main .content .card label a, main .content .card span a {
   position: absolute;
   top: -10rem;
 }
@@ -390,9 +394,39 @@ footer #footer-text {
   font-family: "Karla", sans-serif;
 }
 
+#welcome-text {
+  text-align: center;
+  font-size: 2.8rem;
+  margin-bottom: 2rem;
+  background: linear-gradient(to right, rgb(76, 0, 255), rgb(69, 62, 47), rgb(35, 0, 139));
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 200%;
+  animation: welcome-animation 2s infinite;
+}
+#welcome-text::first-letter {
+  font-size: 300%;
+  color: rgb(35, 0, 139);
+}
+
+@keyframes welcome-animation {
+  0% {
+    background-position: 0 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0 50%;
+  }
+}
 @media only screen and (min-width: 600px) {
   body {
     font-size: 1rem;
+  }
+  body #welcome-text {
+    font-size: 5rem;
   }
   body #mob-nav-icon {
     padding-left: 3vw;
