--- a/tidy.scss
+++ b/tidy.scss
@@ -77,7 +77,6 @@ body {
         left: 0.5rem;
         height: 7rem;
         width: 7rem;
-        // background-image: radial-gradient(3rem at center, $purple 60%, rgb(0,0,0,0));
         background-color: $purple;
         border-radius: 50%;
         mix-blend-mode: lighten;
@@ -320,7 +319,11 @@ main {
           max-width: 500px;
         }
       }
-      label {
+      .anchor {
+                  position: absolute;
+          top: -10rem;
+      }
+      label, span {
         position: relative;
         a {
           position: absolute;
@@ -429,11 +432,40 @@ footer {
     font-family: $karla;
   }
 }
+#welcome-text {
+  text-align: center;
+  font-size: 2.8rem;
+  margin-bottom: 2rem;
+  background: linear-gradient(to right, $purple, $dark-brown, $dark-purple);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-size: 200%;
+  animation: welcome-animation 2s infinite;
+  &::first-letter {
+    font-size: 300%;
+    color: $dark-purple;
+  }
+}
+@keyframes welcome-animation {
+  0% {
+    background-position: 0 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0 50%;
+  }
+}
 
 //TABLET & LANDSCAPE PHONE//
 @media only screen and (min-width: 600px) {
   body {
     font-size: 1rem;
+    #welcome-text {
+      font-size: 5rem;
+    }
     #mob-nav-icon {
       padding-left: 3vw;
     }
