--- a/tidy.css
+++ b/tidy.css
@@ -34,7 +34,7 @@ body header #header-cont {
 }
 body header #header-cont #header-text {
   z-index: 11;
-  font-family: "Monaco", monospace;
+  font-family: "Spline Sans Mono", monospace;
   font-size: 2rem;
   color: rgb(83, 75, 58);
 }
@@ -156,6 +156,15 @@ main .content {
   padding: 1rem;
   background-color: rgb(249, 247, 242);
 }
+main .content .top-card {
+  text-align: center;
+  max-width: 40rem;
+}
+main .content .top-card h2 {
+  font-family: "Spline Sans Mono", monospace;
+  font-size: 2rem;
+  color: rgb(76, 0, 255);
+}
 main .content #page-sub {
   display: none;
 }
@@ -210,6 +219,7 @@ main .content #about-img-cont {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  align-self: center;
   padding: 0;
   margin: 0;
 }
@@ -262,6 +272,7 @@ main .content .card h3 {
 }
 main .content .card .card-list {
   text-align: center;
+  margin: 1rem;
 }
 main .content .card .card-list h3 {
   font-size: 1rem;
@@ -567,8 +578,14 @@ footer #footer-text {
   body main .content {
     flex-wrap: wrap;
   }
+  body main .content .top-card h2 {
+    font-size: 3rem;
+  }
   body main .content .modular {
     width: 40%;
+  }
+  body main .content .gallery {
+    max-width: 20rem;
   }
   body main .content .column {
     display: flex;
