--- a/tidy.scss
+++ b/tidy.scss
@@ -46,6 +46,7 @@ body {
   background-color: $white; //
   position: relative;
   font-size: 1rem;
+  //MOBILE HEADER MODULE//
   header {
     z-index: 10;
     position: fixed;
@@ -63,7 +64,7 @@ body {
       pointer-events: none;
       #header-text {
         z-index: 11;
-        font-family: $monaco;
+        font-family: $spline;
         font-size: 2rem;
         // letter-spacing: 1rem;
         color: $brown;
@@ -186,6 +187,15 @@ main {
     align-items: center;
     padding: 1rem;
     background-color: $white;
+    .top-card {
+      text-align: center;
+      max-width: 40rem;
+      h2 {
+        font-family: $spline;
+        font-size: 2rem;
+        color: $purple;
+      }
+    }
     #page-sub {
       display: none;
     }
@@ -240,6 +250,7 @@ main {
       flex-direction: row;
       justify-content: center;
       align-items: center;
+      align-self: center;
       padding: 0;
       margin: 0;
       img {
@@ -291,6 +302,7 @@ main {
       }
       .card-list {
         text-align: center;
+        margin: 1rem;
         h3 {
           font-size: 1rem;
         }
@@ -607,8 +619,17 @@ footer {
       padding-left: 5rem;
       .content {
         flex-wrap: wrap;
+        .top-card {
+          h2 {
+            font-size: 3rem;
+          }
+        }
         .modular {
           width: 40%; //
+        }
+        //GALLERY SIZE MODULAR CARD//
+        .gallery {
+          max-width: 20rem; //
         }
         .column {
           display: flex;
