--- a/tidy.css
+++ b/tidy.css
@@ -215,10 +215,6 @@ main .content figure img {
   border-radius: 1rem 1rem 1rem 1rem;
 }
 main .content #about-img-cont {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
   align-self: center;
   padding: 0;
   margin: 0;
@@ -227,6 +223,9 @@ main .content #about-img-cont img {
   max-width: 100%;
   border-radius: 1rem 1rem 1rem 1rem;
   box-shadow: 0px 0px 5px rgba(128, 128, 128, 0.669);
+}
+main .content #about-img-cont figcaption {
+  margin-top: -1rem;
 }
 main .content .modular {
   display: flex;
@@ -360,7 +359,8 @@ main .content .card #card2 {
 }
 main .content figcaption {
   text-align: center;
-  font-size: 0.8rem;
+  font-family: "Monaco", monospace;
+  font-size: 0.7rem;
 }
 main .content .info {
   min-width: 15rem;
