--- a/tidy.scss
+++ b/tidy.scss
@@ -246,10 +246,6 @@ main {
       }
     }
     #about-img-cont {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
       align-self: center;
       padding: 0;
       margin: 0;
@@ -257,6 +253,9 @@ main {
         max-width: 100%;
         @include card-border();
         @include box-shadow();
+      }
+      figcaption {
+        margin-top: -1rem;
       }
     }
     .modular {
@@ -399,7 +398,8 @@ main {
     }
     figcaption {
       text-align: center;
-      font-size: 0.8rem;
+      font-family: $monaco;
+      font-size: 0.7rem;
     }
     .info {
       min-width: 15rem;
