Commit before making presentation branch

--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ main .content .wide-cont {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  margin: 1rem;
+  margin: 1rem 0;
   width: 100%;
 }
 main .content .card {
