--- a/style.scss
+++ b/style.scss
@@ -265,7 +265,7 @@ main {
       display: flex;
       flex-direction: row;
       justify-content: space-evenly;
-      margin: 1rem;
+      margin: 1rem 0;
       width: 100%;
     }
     .card {
