--- a/style.scss
+++ b/style.scss
@@ -106,7 +106,6 @@ body {
     transform: translateX(-50vw);
     transition: 0.5s;
     &:hover {
-      background-color: white;
       box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.669);
     }
     #nav-list {
@@ -122,7 +121,11 @@ body {
         font-size: 1.2rem;
         a {
           color: $purple;
+          img {
+          height: 1.5rem;
+          }
         }
+
       }
     }
   }
@@ -578,21 +581,22 @@ footer {
       height: 60vh;
       margin-bottom: 10rem;
       transform: translateX(-13rem); //
-      align-items: flex-start;
+      align-items: center;
       li {
         display: flex;
         flex-direction: row;
-        justify-content: space-evenly;
+        // justify-content: space-evenly;
+        justify-content: center;
         flex-wrap: nowrap;
         margin-left: 1rem;
-        a::before {
-          content: "cd ./";
-          color: $purple;
-          font-family: $monaco;
-          font-size: 1rem;
-          opacity: 0;
-          transition: 0.1s;
-        }
+        // a::before {
+        //   content: "cd ./";
+        //   color: $purple;
+        //   font-family: $monaco;
+        //   font-size: 1rem;
+        //   opacity: 0;
+        //   transition: 0.1s;
+        // }
         a:hover::before {
           opacity: 1;
         }
