--- a/style.css
+++ b/style.css
@@ -69,6 +69,8 @@ body #nav-main {
   max-height: 30rem;
   padding: 2rem 0;
   background-color: rgb(249, 247, 242);
+  box-shadow: 0px 0px 5px rgba(128, 128, 128, 0.669);
+  border-radius: 1rem 1rem 1rem 1rem;
   transform: translateX(-50vw);
   transition: 0.5s;
 }
@@ -403,9 +405,10 @@ footer #footer-text {
 
 #welcome-text {
   text-align: center;
+  font-family: "Spline Sans Mono", monospace;
   font-size: 2.8rem;
   margin-bottom: 2rem;
-  background: linear-gradient(to right, rgb(76, 0, 255), rgb(69, 62, 47), rgb(35, 0, 139));
+  background: linear-gradient(to right, blue, rgb(35, 0, 139), rgb(76, 0, 255));
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -465,14 +468,6 @@ footer #footer-text {
   body main .content #about-img {
     max-width: 500px;
   }
-  body main .content #page-sub {
-    position: absolute;
-    display: block;
-    top: 3rem;
-    height: 2rem;
-    right: 0rem;
-    transform: rotate(270deg);
-  }
 }
 @media only screen and (min-width: 992px) {
   body {
@@ -488,7 +483,7 @@ footer #footer-text {
     padding-right: 5rem;
   }
   body header #header-cont img {
-    width: 8rem;
+    width: 6rem;
   }
   body #nav-button {
     position: absolute;
@@ -590,6 +585,13 @@ footer #footer-text {
   body main .content .column .card {
     width: 100%;
     min-width: 20rem;
+  }
+  body main .content .column .card .button {
+    transform: scale(1);
+  }
+
+  .button {
+    transform: scale(1.2);
   }
 }
 
