--- a/style.scss
+++ b/style.scss
@@ -101,8 +101,8 @@ body {
     max-height: 30rem;
     padding: 2rem 0;
     background-color: $white;
-    // @include box-shadow();
-    // @include card-border();
+    @include box-shadow();
+    @include card-border();
     transform: translateX(-50vw);
     transition: 0.5s;
     &:hover {
@@ -446,14 +446,16 @@ footer {
 }
 #welcome-text {
   text-align: center;
+  font-family: $spline;
   font-size: 2.8rem;
   margin-bottom: 2rem;
-  background: linear-gradient(to right, $purple, $dark-brown, $dark-purple);
+  background: linear-gradient(to right, blue, $dark-purple, $purple);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-size: 200%;
   animation: welcome-animation 2s infinite;
+  // animation: welcome-appear 3s;
   &::first-letter {
     font-size: 300%;
     color: $dark-purple;
@@ -470,6 +472,17 @@ footer {
     background-position: 0 50%;
   }
 }
+// @keyframes welcome-appear {
+//   0% {
+//     opacity: 0%;
+//   }
+//   50% {
+//     opacity: 50%;
+//   }
+//   100% {
+//     opacity: 100%;
+//   }
+// }
 
 //TABLET & LANDSCAPE PHONE//
 @media only screen and (min-width: 600px) {
@@ -519,14 +532,15 @@ footer {
         //   transform: rotate(90deg);
         //   color: $brown;
         // }
-        #page-sub {
-          position: absolute;
-          display: block;
-          top: 3rem;
-          height: 2rem;
-          right: 0rem;
-          transform: rotate(270deg);
-        }
+
+        // #page-sub {
+        //   position: absolute;  //// TURNED OFF PAGE SUB 
+        //   display: block;
+        //   top: 3rem;
+        //   height: 2rem;
+        //   right: 0rem;
+        //   transform: rotate(270deg);
+        // }
       }
     }
   }
@@ -544,7 +558,7 @@ footer {
         transform: scale(1.5);
         padding-right: 5rem;
         img {
-          width: 8rem;
+          width: 6rem;
         }
       }
     }
@@ -658,9 +672,15 @@ footer {
           .card {
             width: 100%;
             min-width: 20rem;
+            .button {
+              transform: scale(1);
+            }
           }
         }
       }
     }
+  }
+  .button {
+    transform: scale(1.2);
   }
 }
