--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
   overflow-x: hidden;
 }
 
+#body-index {
+  background-image: url("./img/pine-bg.png");
+}
+
 body {
   background-color: rgb(249, 247, 242);
   position: relative;
@@ -24,7 +28,6 @@ body header {
   align-items: center;
   height: 4rem;
   width: 100vw;
-  background-color: rgb(249, 247, 242);
   box-shadow: 0px 0px 5px rgba(128, 128, 128, 0.669);
 }
 body header #header-cont {
@@ -68,7 +71,6 @@ body #nav-main {
   height: 60vh;
   max-height: 30rem;
   padding: 2rem 0;
-  background-color: rgb(249, 247, 242);
   box-shadow: 0px 0px 5px rgba(128, 128, 128, 0.669);
   border-radius: 1rem 1rem 1rem 1rem;
   transform: translateX(-50vw);
@@ -106,7 +108,6 @@ body a {
 }
 
 main {
-  background-color: rgb(249, 247, 242);
   position: relative;
   top: 4rem;
   min-width: 100vw;
@@ -147,7 +148,6 @@ main .content {
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
-  background-color: rgb(249, 247, 242);
 }
 main .content .article {
   max-width: 40rem;
@@ -396,7 +396,6 @@ footer {
   height: 5vh;
   bottom: 0vh;
   padding: 1rem;
-  background-color: rgb(249, 247, 242);
   box-shadow: 0px 0px 5px rgba(128, 128, 128, 0.669);
 }
 footer #footer-text {
