--- a/style.scss
+++ b/style.scss
@@ -4,7 +4,7 @@ $mint: rgb(217, 235, 201);
 $light-brown: rgb(156, 150, 135);
 $brown: rgb(83, 75, 58);
 $dark-brown: rgb(69, 62, 47);
-$pine: rgb(67, 96, 64);
+$pine: #324031;
 $black: rgb(57, 57, 57);
 $light-purple: rgb(116, 56, 255);
 $purple: rgb(76, 0, 255);
@@ -42,6 +42,12 @@ body {
   height: 100vh; // don't use min-height, it'll add another scrollbar!
   overflow-x: hidden;
 }
+//HOME PAGE BACKGROUND//
+#body-index {
+  // background-color:#324031;
+  background-image: url("./img/pine-bg.png");
+  // background-size: 75%;
+}
 body {
   background-color: $white; //
   position: relative;
@@ -56,7 +62,7 @@ body {
     align-items: center;
     height: 4rem;
     width: 100vw;
-    background-color: $white;
+    // background-color: $white;
     @include box-shadow();
     #header-cont {
       position: absolute;
@@ -100,7 +106,7 @@ body {
     height: 60vh;
     max-height: 30rem;
     padding: 2rem 0;
-    background-color: $white;
+    // background-color: $white;
     @include box-shadow();
     @include card-border();
     transform: translateX(-50vw);
@@ -139,7 +145,7 @@ body {
   }
 }
 main {
-  background-color: $white; //
+  // background-color: $white; //
   position: relative;
   top: 4rem;
   min-width: 100vw;
@@ -181,7 +187,7 @@ main {
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
-    background-color: $white;
+    // background-color: $white;
     .article {
       max-width: 40rem;
     }
@@ -438,7 +444,7 @@ footer {
   height: 5vh;
   bottom: 0vh;
   padding: 1rem;
-  background-color: $white;
+  // background-color: $white;
   @include box-shadow();
   #footer-text {
     font-family: $karla;
