--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,7 @@ $light-brown: rgb(156, 150, 135);
 $brown: rgb(83, 75, 58);
 $dark-brown: rgb(69, 62, 47);
 $pine: rgb(67, 96, 64);
+$dark-pine: #324031;
 $black: rgb(57, 57, 57);
 $light-purple: rgb(116, 56, 255);
 $purple: rgb(76, 0, 255);
@@ -452,21 +453,28 @@ footer {
   }
 }
 //HOME PAGE HERO TITLE STYLING AND ANIMATION//
+#home-body,
+#home-sec,
+#home-main {
+  background-color: $dark-pine;
+}
 #welcome-text {
   text-align: center;
   font-family: $spline;
-  font-size: 2.8rem;
+  font-size: 4rem;
+  color: $white;
+  word-break: break-word;
   margin-bottom: 2rem;
-  background: linear-gradient(to right, blue, $dark-purple, $purple);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  // // background: linear-gradient(to right, blue, $dark-purple, $purple);
+  // // background-clip: text;
+  // -webkit-background-clip: text;
+  // -webkit-text-fill-color: transparent;
   background-size: 200%;
   animation: welcome-animation 2s infinite;
-  &::first-letter {
-    font-size: 300%;
-    color: $dark-purple;
-  }
+  // &::first-letter {
+  //   font-size: 300%;
+  //   color: $dark-purple;
+  // }
 }
 @keyframes welcome-animation {
   0% {
